Updates after merge with master branch and update to Readme.