@@ -4,7 +4,7 @@
 <modelVersion>4.0.0</modelVersion>
 
 <groupId>org.springframework</groupId>
-<artifactId>gs-maven</artifactId>
+<artifactId>eda-poc</artifactId>
 <packaging>jar</packaging>
 <version>0.1.0</version>
 
@@ -29,7 +29,7 @@
     <dependency>
         <groupId>com.rabbitmq</groupId>
         <artifactId>amqp-client</artifactId>
-        <version>5.10.0</version>
+        <version>5.11.0</version>
     </dependency>
     <dependency>
         <groupId>com.google.code.gson</groupId>
@@ -39,7 +39,7 @@
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>5.3.3</version>
+        <version>5.3.5</version>
     </dependency>
     <dependency>
         <groupId>org.apache.kafka</groupId>
@@ -64,29 +64,29 @@
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>3.7.7</version>
+        <version>3.8.0</version>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
-        <version>3.7.7</version>
+        <version>3.8.0</version>
     </dependency>
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-java</artifactId>
-        <version>6.10.0</version>
+        <version>6.10.2</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-junit</artifactId>
-        <version>6.10.0</version>
+        <version>6.10.2</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.9.2</version>
+        <version>2.10.10</version>
     </dependency>
     <dependency>
         <groupId>org.junit.vintage</groupId>
@@ -96,12 +96,12 @@
     <dependency>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro</artifactId>
-        <version>1.10.1</version>
+        <version>1.10.2</version>
     </dependency>
     <dependency>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro-maven-plugin</artifactId>
-        <version>1.10.1</version>
+        <version>1.10.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.confluent/kafka-schema-registry-maven-plugin
     <dependency>
@@ -120,6 +120,14 @@
 
  <build>
     <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>versions-maven-plugin</artifactId>
+            <version>2.5</version>
+            <configuration>
+                <generateBackupPoms>false</generateBackupPoms>
+            </configuration>
+        </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
@@ -148,7 +156,12 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>2.22.0</version>
+            <configuration>
+                <argLine>
+                    --illegal-access=permit
+                </argLine>
+            </configuration>
         </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -192,9 +205,9 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
+                <release>11</release>
             </configuration>
         </plugin>
         <!-- https://mvnrepository.com/artifact/io.confluent/kafka-schema-registry-maven-plugin
@@ -207,12 +220,12 @@
                 <param>http://schema-registry:8081</param>
             </schemaRegistryUrls>
             <subjects>
-                <testtopic>src/main/avro/events-poc.avsc</testtopic>
-                <othertopic>src/main/avro/events-poc.avsc</othertopic>
+                <transactions>src/main/avro/events-poc.avsc</transactions>
+                <transactions_handled>src/main/avro/events-poc.avsc</transactions_handled>
             </subjects>
             <schemaTypes>
-                <testtopic>AVRO</testtopic>
-                <othertopic>AVRO</othertopic>
+                <transactions>AVRO</transactions>
+                <transactions_handled>AVRO</transactions_handled>
             </schemaTypes>
         </configuration>
         <goals>
